--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   material_design_icons_flutter: ^6.0.7096
   flutter_launcher_icons: ^0.11.0
   dio: ^4.0.6
+  flutter_html: ^3.0.0-alpha.6
 
 dev_dependencies:
   flutter_test:
