--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   dio: ^4.0.6
   flutter_html: ^3.0.0-alpha.6
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
