--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = sa3ed
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.sa3ed
+PRODUCT_BUNDLE_IDENTIFIER = com.sa3edC.sa3ed
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
