--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   dio: ^4.0.6
   flutter_html: ^3.0.0-alpha.6
   url_launcher: ^6.1.9
+  flutter_speed_dial: ^6.2.0
 
 dev_dependencies:
   flutter_test:
